--- a/sled_groups/templates/sled_groups/group_add_remove_members.html
+++ b/sled_groups/templates/sled_groups/group_add_remove_members.html
@@ -1,7 +1,11 @@
 {% extends "modal_base.html" %}
 
 {% block title %}
-Cede ownership?
+{% if form.mode.value == 'add' %}
+Add new members to the group
+{% else %}
+Remove members from the group
+{% endif %}
 {% endblock title %}
 
 
@@ -9,31 +13,33 @@ Cede ownership?
 <input type="hidden" id="Urlusers" data-url="{% url 'api:users-view' %}" />
 
 <div>
-  {{ form.heir }}
-</div>
-
-<div>
-  {{ form.justification }}
+  {{ form.users }}
 </div>
 
 {{ form.group_id }}
+{{ form.mode }}
 {% endblock content %}
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-sm btn-danger">Cede ownership</button>
+<button type="submit" class="btn btn-sm btn-primary">
+  {% if form.mode.value == 'add' %}
+  Add users
+  {% else %}
+  Remove users
+  {% endif %}
+</button>
 {% endblock action_button %}
 
 
 {% block extrascripts %}
 <script>
-  users_autocomplete('id_heir');
-  $('#id_heir').select2({
+  users_autocomplete('id_users');
+  $('#id_users').select2({
       width: '100%',
       placeholder: 'Search for a user',
       minimumInputLength: 1,
       dropdownParent: $('#id-modal')
   });
-  
 </script>
 {% endblock extrascripts %}
