--- a/sled_collections/templates/sled_collections/collection_detail.html
+++ b/sled_collections/templates/sled_collections/collection_detail.html
@@ -43,7 +43,7 @@
   <p>Item type: {{ collection.item_type }}</p>
   <p>Description: {{ collection.description }}</p>
 
-  {% if  collection.owner == user %}
+  {% if collection.owner == user %}
   <button type="button" id="update-collection" class="btn btn-sm btn-primary" data-form-url="{% url 'sled_collections:collection-update' collection.pk %}">
     <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
     Update
@@ -64,15 +64,33 @@
 
 <hr>
 
+
+{% if collection.owner == user %}
+<div>
+  <h3>Access to the collection:</h3>
+  <p>Users:</p>
+  {{ collection.getUsersWithAccessNoOwner|join:"," }}
+  <p>Groups:</p>
+  {{ collection.getGroupsWithAccessNoOwner|join:"," }}
+</div>
+{% else %}
+<div>
+  <h3>Access to the collection:</h3>
+  <p>
+    You can access <strong>{{ accessible_items|length }}</strong> out of <strong>{{ collection.myitems.all|length }}</strong> items in the collection.
+  </p>
+</div>
+{% endif %}
+
 <!-- List of items in the collection -->
 <div>
-  <p>Items in the collection:</p>
+  <h3>Items in the collection:</h3>
   <form id="ids-form" method="POST">
     {% csrf_token %}
     <input type="hidden" name="collection_id" id="collection_id" value="{{ collection.id }}">
     <span class="errorlist">{{ error_message }}</span>
     {% if collection.item_type == 'Lenses' %}
-    {% include "lenses/lens_list_executive.html" with lenses=collection.myitems.all %}
+    {% include "lenses/lens_list_passive.html" with lenses=accessible_items  %}
     {% else %}
     <p> Unknown item type </p>
     {% endif %}
