Added give and revoke access buttons to collection detail. Fixed some forms, urls, etc, in groups and lenses.

--- a/lenses/templates/lenses/lens_make_collection.html
+++ b/lenses/templates/lenses/lens_make_collection.html
@@ -21,6 +21,10 @@ Make collection?
   {{ form.description }}
 </div>
 
+<div>
+  {{ form.access_level }}
+</div>
+
 {{ form.ids }}
 {% endblock content %}
 
