Cleaned up the sled_group app.

--- a/sled_collections/templates/sled_collections/collection_detail.html
+++ b/sled_collections/templates/sled_collections/collection_detail.html
@@ -65,8 +65,7 @@
   
   Some notes here:
   <ul>
-    <li>Button: If private make public (future)</li>
-    <li>Button: If public make private (future)</li>
+    <li>Button: If private make public (no need to make a public collection private, just delete it)</li>
   </ul>
   {% endif %}
 </div>
