Fixed adding objects to collections

--- a/lenses/templates/lenses/lens_query.html
+++ b/lenses/templates/lenses/lens_query.html
@@ -2,32 +2,10 @@
 {% load static %}
 
 {% block content %}
-<!-- Message div -->
-<div>
-  {% if messages %}
-  {% for message in messages %}
-  {% if message.tags %}
-  <div style="border-radius:0;" class="alert alert-icon alert-{{ message.tags }} alert-dismissible fade show mb-0" role="alert">
-    {{ message }}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  {% else %}
-  <div style="border-radius:0;">
-    {{ message }}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  {% endif %}
-  {% endfor %}
-  {% endif %}
-</div>
 
 <!-- Modal divs -->
-<div class="modal fade" tabindex="-1" role="dialog" id="id-modal">
-  <div class="modal-dialog modal-xl">
+<div class="modal fade" id="id-modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
     <div class="modal-content"></div>
   </div>
 </div>
@@ -53,9 +31,12 @@
 
 <div class="controls">
   <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-collage' %}">See collage</button>
-  <button type="submit" form="ids-form" formaction="{% url 'lenses:lens-make-collection' %}">Make collection</button>
-  <button type="button" class="add-items btn btn-sm btn-primary" data-form-url="{% url 'sled_collections:collections-list2' %}">
-    <img src="{% static 'icons/plus.svg' %}" alt="plus">
+  <button type="button" id="make-collection" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:lens-make-collection' %}">
+    <img src="{% static 'icons/folder-fill.svg' %}" alt="collection">
+    Make collection
+  </button>
+  <button type="button" id="add-to-collection" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'sled_collections:collection-add-items' 'Lenses' %}">
+    <img src="{% static 'icons/folder-fill.svg' %}" alt="collection">
     Add to collection
   </button>
 </div>
@@ -65,20 +46,46 @@
 {% endblock content %}
 
 
-{% block extrascripts %}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
-<script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
-
-<script type="text/javascript" src="{% static 'lenses/js/jquery.formset.js' %}"></script>
-<script type="text/javascript" src="{% static 'lenses/js/lens_add.js' %}"></script>
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-
+{% block extrastyles %}
 <link rel="stylesheet" type="text/css" href="{% static 'lenses/css/lens_add.css' %}"/>
 <link rel="stylesheet" type="text/css" href="{% static 'lenses/css/lens_visit_card.css' %}"/>
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+{% endblock extrastyles %}
 
+
+{% block extrascripts %}
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+<script type="text/javascript" src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
 <script type="text/javascript">
   $(document).ready(function() {
+      
+      $(".sled-process-lenses").click(function() {
+	  
+	  // Construct get query string
+	  var values = [];
+	  $('#exe_summary input[type="checkbox"]:checked').each(function() {
+              values.push('ids=' + $(this).val());
+	  });
+	  
+	  if (values.length == 0) {
+              alert('You need to select at least one item!');
+	  } else {
+              var get_str = '?' + values.join('&') + '&';
+	      
+              // Fetch only the first part of the URL (without any GET arguments)
+              var url = $(this).data('form-url').split('?');
+              var url_core = url[0];
+	      
+              // Trigger modal
+              var new_form_url = url_core + get_str;
+              $(this).modalFormTrigger({
+		  formURL: new_form_url,
+		  modalID: "#id-modal"
+              });
+	  }
+	  
+      });
       
       function addItemsCollectionModalForm() {
           $(".add-items").each(function () {
