--- a/sled_collections/templates/sled_collections/collection_delete.html
+++ b/sled_collections/templates/sled_collections/collection_delete.html
@@ -1,20 +1,18 @@
-<form method="post" action="">
-  {% csrf_token %}
+{% extends "modal_base.html" %}
 
-  <div class="modal-header">
-    <h3 class="modal-title">Delete Collection</h3>
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
 
-  <div class="modal-body">
-    <p class="delete-text">Are you sure you want to delete collection named
-      <strong>{{ collection.name }}</strong>?</p>
-  </div>
+{% block title %}
+Delete collection
+{% endblock title %}
 
-  <div class="modal-footer">
-    <button type="submit" id="delete-btn" class="btn btn-danger">Delete</button>
-  </div>
 
-</form>
+{% block content %}
+<div>
+  Are you sure you want to delete the collection named <strong>{{ collection.name }}</strong>?
+</div>
+{% endblock content %}
+
+
+{% block action_button %}
+<button type="submit" class="btn btn-danger">Delete</button>
+{% endblock action_button %}
