--- a/templates/user_index.html
+++ b/templates/user_index.html
@@ -196,7 +196,7 @@
       <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
       Update lenses
     </button>
-    <button type="button" id="make-collection" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:lens-make-collection' %}">
+    <button type="button" id="make-collection" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'sled_collections:collection-create' 'Lenses' %}">
       <img src="{% static 'icons/folder-fill.svg' %}" alt="collection">
       Make collection
     </button>
