Moved 'users' into 'sled_users'. The user profile html template is now a part of the sled_users app.

--- a/lenses/templates/lenses/lens_index.html
+++ b/lenses/templates/lenses/lens_index.html
@@ -20,7 +20,7 @@
     <img src="{% static 'images/JB_Lenses_Add-New.png' %}" loading="lazy" width="100" height="100" alt="">
     <h1 class="jb-heading-2">Add new lenses</h1>
   </a>
-  <a href="{% url 'users:user-profile' %}" class='jb-div-block-3'>
+  <a href="{% url 'sled_users:user-profile' %}" class='jb-div-block-3'>
     <img src="{% static 'images/JB_Lenses_Manage.png' %}" loading="lazy" width="100" height="100" alt="">
     <h1 class="jb-heading-2">Manage your lenses</h1>
   </a>
