Added choice of access level when creating a new group.

--- a/sled_groups/templates/sled_groups/group_create.html
+++ b/sled_groups/templates/sled_groups/group_create.html
@@ -24,6 +24,10 @@ Create new group?
 <div>
   {{ form.users }}
 </div>
+
+<div>
+  {{ form.access_level }}
+</div>
 {% endblock content %}
 
 {% block action_button %}
