--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -101,6 +101,7 @@
         <a href="{% url 'lenses:lens-index' %}">Lenses</a>
         <!-- <a href="{% if '/sled_groups/' in url_base %}selected{% endif %}"></a> -->
         <a href="{% url 'sled_groups:group-list' %}">Groups</a>
+        <a href="{% url 'sled_collections:collections-list' %}">Collections</a>
         {% if user.is_authenticated %}
         <a href="{% url 'sled_users:user-profile' %}">{{ user.username }}</a>
         <a href="{% url 'logout'%}" class="jb-navbar-login"><span class="text-span">Logout</span></a>
