--- a/sled_collections/templates/sled_collections/collection_split_list.html
+++ b/sled_collections/templates/sled_collections/collection_split_list.html
@@ -11,11 +11,11 @@
 
 
 
-<h1>Collections that I created</h1>
 
-<div>
+<div class="jb-container">
+  <h1 class="jb-heading-1">Collections that I created</h1>
   {% if collections_owned %}
-  <table>
+  <table class="jb-table">
     <thead>
       <tr>
 	<th>Name</th>
@@ -43,12 +43,10 @@
 </div>
 
 
-
-<h1>Collections that I have access to</h1>
-
-<div>
+<div class="jb-container">
+  <h1 class="jb-heading-1">Collections that I have access to</h1>
   {% if collections_access %}
-  <table>
+  <table class="jb-table">
     <thead>
       <tr>
 	<th>Name</th>
